Checked in 2/22/2017 - UOB chart area revised

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
@@ -6,7 +6,7 @@
 
     <div class="Container100 TextAlCenter">
 		<h3 class="StepsQuestionsFS" style="text-align: center!important; margin: 10px 0px!important;">
-			Welcome to Building Benjamins! <br />We will start by asking you a
+			Welcome to #{webutil.webprofile.companyname}! <br />We will start by asking you a
 			set of questions - beginning with your goals, and then about your
 			attitudes towards risk.
 		</h3>
