--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -383,13 +383,13 @@
                             <ui:fragment rendered="#{uobpb.charts.pieChart != null and uobpb.typeOfChart == 'PRIMEFACES.2DDONUT'}">
                                 <div class="Container100">
                                     <p:outputPanel id="charts" style="border: 0px">
-                                        <div class="Container50  Fleft Responsive100"><!-- ROHIT's CHANGE -->
+                                        <div class="Container30 Fleft Responsive100"><!-- ROHIT's CHANGE -->
                                             <div class="Container100">
                                                 <p:chart type="pie" model="#{uobpb.charts.pieChart}"
                                                          responsive="true"/>
                                             </div>
                                         </div>
-                                        <div class="Container50 Fleft Responsive100"><!-- ROHIT's CHANGE -->
+                                        <div class="Container70 Fleft Responsive100"><!-- ROHIT's CHANGE -->
                                             <div class="ContainerIndent">
                                                 <p:dataTable styleClass="uob_graphTable"
                                                              value="#{uobpb.editableAsset}"
@@ -399,20 +399,24 @@
                                                         <h:outputText value=" "/>
                                                     </p:column>
 
-                                                    <p:column styleClass="Wid40 Fs12 TexAlLeft"
+                                                    <p:column style="width: 50%"
+                                                              styleClass="Wid50 Fs12 TexAlLeft"
                                                               headerText="Asset">
                                                         <h:outputText value="#{assetList.asset}"/>
                                                     </p:column>
-                                                    <p:column styleClass="Wid20 Fs12 num-text-align TexAlRight"
+                                                    <p:column priority="3"
+                                                              style="width: 15%"
+                                                              styleClass="Fs12 num-text-align TexAlRight"
                                                               headerText="Weight"><!-- ROHIT's CHANGE -->
                                                         <h:outputText value="#{assetList.userEdit}">
-                                                            <f:convertNumber pattern="##0.00%"/>
+                                                            <f:convertNumber pattern="##0%"/>
                                                         </h:outputText>
                                                     </p:column>
-                                                    <p:column styleClass="Wid30 Fs12 num-text-align TexAlRight"
+                                                    <p:column style="width: 34%"
+                                                              styleClass="Fs12 num-text-align TexAlRight"
                                                               headerText="Value"><!-- ROHIT's CHANGE -->
                                                         <h:outputText value="#{assetList.value}">
-                                                            <f:convertNumber currencySymbol="$" type="currency"/>
+                                                            <f:convertNumber pattern="$##,###,###"/>
                                                         </h:outputText>
                                                     </p:column>
                                                     <p:columnGroup type="footer">
@@ -421,7 +425,7 @@
                                                                       footerText="Total">
                                                             </p:column>
                                                             <p:column styleClass="Fs12 TexAlRight FontBold"
-                                                                      footerText="#{dataDisplayConverter.displayAsMoney(uobpb.totalMoneyAllocated)}">
+                                                                      footerText="#{dataDisplayConverter.displayAsMoneyRounded(uobpb.totalMoneyAllocated)}">
                                                             </p:column>
                                                         </p:row>
                                                     </p:columnGroup>
@@ -482,28 +486,30 @@
                                             <h:outputText value=" "/>
                                         </p:column>
 
-                                        <p:column priority="3" style="width:61%;" styleClass="Fs12 TexAlLeft">
+                                        <p:column style="width:61%;" styleClass="Fs12 TexAlLeft">
                                             <f:facet name="header">
                                                 <h:outputText value="Name"/>
                                             </f:facet>
                                             <h:outputText value="#{ticker.name}"/> [ <h:outputText value="#{ticker.symbol}"/> ]
                                         </p:column>
 
-                                        <p:column style="width:10%;" styleClass="Fs12 num-text-align TexAlRight"><!-- ROHIT's CHANGE -->
+                                        <p:column priority="3"
+                                                  style="width:15%;"
+                                                  styleClass="Fs12 num-text-align TexAlRight"><!-- ROHIT's CHANGE -->
                                             <f:facet name="header">
                                                 <h:outputText value="Allocated"/>
                                             </f:facet>
                                             <h:outputText value="#{ticker.weight}">
-                                                <f:convertNumber pattern="##0.00%"/>
+                                                <f:convertNumber pattern="##0%"/>
                                             </h:outputText>
                                         </p:column>
 
-                                        <p:column style="width:28%;" styleClass="Fs12 num-text-align TexAlRight"><!-- ROHIT's CHANGE -->
+                                        <p:column style="width:23%;" styleClass="Fs12 num-text-align TexAlRight"><!-- ROHIT's CHANGE -->
                                             <f:facet name="header">
                                                 <h:outputText value="Value"/>
                                             </f:facet>
                                             <h:outputText value="#{ticker.value}">
-                                                <f:convertNumber currencySymbol="$" type="currency"/>
+                                                <f:convertNumber pattern="$##,###,###"/>
                                             </h:outputText>
                                         </p:column>
 
@@ -514,7 +520,7 @@
                                                           footerText="Total">
                                                 </p:column>
                                                 <p:column styleClass="Fs14 TexAlRight FontBold"
-                                                          footerText="#{dataDisplayConverter.displayAsMoney(uobpb.totalMoneyAllocated)}">
+                                                          footerText="#{dataDisplayConverter.displayAsMoneyRounded(uobpb.totalMoneyAllocated)}">
                                                 </p:column>
                                             </p:row>
                                         </p:columnGroup>
