--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
@@ -24,21 +24,23 @@
             </p:selectOneMenu>
 
             <div class="Wid100 uobCoreLabel">Your current age</div>
-            <p:spinner id="age" value="#{uobpb.age}"
-                       min="1" max="100" stepFactor="1">
+            <p:inputNumber value="#{uobpb.age}"
+                           min="18" max="100"
+                           maxlength="5" decimalPlaces="0">
                 <p:ajax event="blur" listener="#{uobpb.onChangeValue}"
                         update=":ceForm:workArea, :ceForm:graphArea"/>
-            </p:spinner>
+            </p:inputNumber>
 
             <div class="Wid100 uobCoreLabel">How long do you plan to invest?</div>
-            <p:spinner id="horizon" value="#{uobpb.horizon}"
-                       min="1" max="20" stepFactor="1">
+            <p:inputNumber value="#{uobpb.horizon}"
+                           min="1" max="20"
+                           maxlength="5" decimalPlaces="0">
                 <p:ajax event="blur" listener="#{uobpb.onChangeValue}"
                         update=":ceForm:workArea, :ceForm:graphArea"/>
-            </p:spinner>
+            </p:inputNumber>
 
             <div class="Wid100 uobCoreLabel">Initial investment</div>
-            <p:inputNumber id="initialInvestment" styleClass="Wid100 uob_investAmount"
+            <p:inputNumber styleClass="Wid100 uob_investAmount"
                             value="#{uobpb.initialInvestment}"
                             maxlength="11" decimalPlaces="0" symbol="$">
                 <p:ajax listener="#{uobpb.onChangeValue}"
