Checked in 01/06/2017 db script changes

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -205,7 +205,9 @@
 
                                                                        weight_value = this.y.toFixed(0) + "%";
                                                                        name_value = this.name;
-                                                                       amount_value = '$' + this.amount;
+                                                                       amount_value = '$'
+                                                                               + Highcharts.numberFormat(this.amount,
+                                                                                                         0, ',', ',');
                                                                        color_value = this.color;
 
                                                                        drawChart();
@@ -214,7 +216,9 @@
                                                                    {
                                                                        weight_value = this.y.toFixed(0) + "%";
                                                                        name_value = this.name;
-                                                                       amount_value = '$' + this.amount;
+                                                                       amount_value = '$'
+                                                                               + Highcharts.numberFormat(this.amount,
+                                                                                                         0, ',', ',');
                                                                        color_value = this.color;
 
                                                                        drawChart();
